[BE] Api get nearest facilities
